# RepoPulse

./: .gitignore  README.md  RepoPulse_app building prompt.txt  pyproject.toml
app/: app.py  logging_setup.py  schemas.py  settings.py  validate_configs.py
app/collector/: __init__.py  actions.py  commits.py  readme.py  releases.py  tree_scan.py
app/dashboard/: server.py
app/github/: github_client.py
app/reporting/: __init__.py  csv_export.py  deepdive.py  weekly.py
app/scoring/: engine.py
app/storage/: __init__.py  db.py  db_check.py  repo_store.py  run_store.py  sa.py  snapshot_store.py
configs/: default.yaml  repos.yaml  signals.yaml
data/: repopulse.sqlite3
docs/: architecture.md  data-model.md  operations.md  project-plan.md
exports/: latest_snapshot.csv
scripts/: release.ps1  run_weekly.ps1
tests/: test_releases_collector.py  test_reporting_helpers.py  test_scoring_engine.py
