[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repopulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pydantic",
    "httpx",
    "pyyaml",
    "sqlalchemy",
    "fastapi",
    "uvicorn",
]

[project.scripts]
repopulse = "app.app:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["configs*", "tests*"]
